--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -4,5 +4,12 @@
         <!-- Show a splash screen on the activity. Automatically removed when
              Flutter draws its first frame -->
         <item name="android:windowBackground">@drawable/launch_background</item>
+        Flutter draws its first frame -->
+        <!--        是否全屏显示-->
+        <!--        <item name="android:windowFullscreen">true</item>-->
+        <!--        设置启动背景 引入启动页 xml-->
+
+        <!--        启动时状态栏状态是否透明-->
+        <item name="android:windowIsTranslucent">true</item>
     </style>
 </resources>
